# aries-sdk

docs/: split-ideas.md
libaries/: Cargo.toml
libaries/include/: aries_anon.h  aries_sdk.h  aries_sdk_did.h
libaries/src/api/: anon.rs  did.rs
