[package]
name = "libaries"
version = "0.1.0"
authors = ["Daniel Bluhm <daniel.bluhm@sovrin.org>","Adam Burdett <burdettadam@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyperledger/aries-sdk"
documentation = "https://docs.rs/aries-sdk"
homepage = "https://crates.io/crates/aries-sdk"
edition = "2018"

[lib]
name = "libaries"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
ffi-support = "0.3.4"
failure = "0.1.5"

[package.metadata.deb]
maintainer = "Hyperledger"
license-file = ["../LICENSE", "0"]
copyright = "2019, Hyperledger"
depends = "$auto"
extended-description = """\
Rust written library for managing Aries wallets"""
section = "admin"
revision = "1"
priority = "optional"
assets = [
    ["target/release/libaries.a", "usr/lib", "644"],
    ["target/release/libaries.so", "usr/lib", "644"],
    ["include/aries-sdk.h", "usr/include", "644"]
]

[package.metadata.rpm]
maintainer = "Hyperledger"
license-file = ["../LICENSE", "0"]
copyright = "2019, Hyperledger"
depends = "$auto"
revision = "1"
priority = "optional"
extended-description = """\
Rust written library for managing Aries wallets
"""
